making progress on rewriting the website. I think it will take 3 more days. Tidbits css is the next task.

--- a/index.html
+++ b/index.html
@@ -1,10 +1,109 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>
+      Plain Talk Post - Curate, Create, and Share Personalized News Feeds
+    </title>
+    <meta
+      name="description"
+      content="Create and share personalized news feeds with diverse perspectives on current events. Stay informed with balanced, well-researched content tailored to your interests on Plain Talk Post."
+    />
+    <link rel="canonical" href="https://plaintalkpost.com" />
+    <link rel="icon" href="/img/favicon.png" type="image/png" />
+    <link rel="icon" href="/img/favicon.ico" type="image/x-icon" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,500;0,700;1,400;1,500&amp;display=swap"
+      rel="stylesheet"
+    />
+    <meta
+      property="og:title"
+      content="Plain Talk Post - Curate and Share Personalized News Feeds"
+    />
+    <meta
+      property="og:description"
+      content="Create and share custom news feeds with balanced, well-researched content on the topics that matter most. Plain Talk Post delivers diverse perspectives to keep you informed."
+    />
+    <meta
+      property="og:image"
+      content="https://plaintalkpost.com/public/img/PlainTalkPostLogoWithBackground.png"
+    />
+    <!-- Ensure you have a representative image here -->
+    <meta property="og:url" content="https://plaintalkpost.com" />
+    <meta property="og:type" content="website" />
+    <meta
+      name="keywords"
+      content="Personalized News, Custom News Feeds, Diverse Perspectives, Balanced Articles And Videos, Plain Talk Post"
+    />
+    <!-- Twitter Card Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta
+      name="twitter:title"
+      content="Plain Talk Post - Curate and Share Personalized News Feeds"
+    />
+    <meta
+      name="twitter:description"
+      content="Create and share custom news feeds with balanced, well-researched content on the topics that matter most. Plain Talk Post delivers diverse perspectives to keep you informed."
+    />
+    <meta
+      name="twitter:image"
+      content="https://plaintalkpost.com/public/img/PlainTalkPostLogoWithBackground.png"
+    />
+    <meta name="twitter:site" content="@PlainTalkPost" />
+    <meta name="twitter:creator" content="@PlainTalkPost" />
+    <!-- If you have a Twitter handle for the organization -->
+    <meta name="twitter:url" content="https://plaintalkpost.com" />
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "WebSite",
+        "url": "https://plaintalkpost.com",
+        "name": "Plain Talk Post",
+        "description": "Create and share personalized news feeds with diverse perspectives on current events. Stay informed with balanced, well-researched content tailored to your interests.",
+        "publisher": {
+          "@type": "Organization",
+          "name": "Plain Talk Post",
+          "logo": {
+            "@type": "ImageObject",
+            "url": "https://plaintalkpost.com/public/img/PlainTalkPostLogoWithBackground.png"
+          }
+        },
+        "potentialAction": {
+          "@type": "SearchAction",
+          "target": "https://plaintalkpost.com/search?q={search_term_string}",
+          "query-input": "required name=search_term_string"
+        },
+        "mainEntityOfPage": {
+          "@type": "WebPage",
+          "@id": "https://plaintalkpost.com"
+        },
+        "about": {
+          "@type": "Thing",
+          "name": "Personalized News Feeds"
+        },
+        "creator": {
+          "@type": "Organization",
+          "name": "Plain Talk Post",
+          "url": "https://plaintalkpost.com"
+        }
+      }
+    </script>
+    <script type="module" src="/src/main.jsx" defer=""></script>
+    <script
+      async=""
+      src="https://www.googletagmanager.com/gtag/js?id=G-VMV5KRT7Y9"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+      gtag("config", "G-VMV5KRT7Y9");
+    </script>
   </head>
   <body>
     <div id="root"></div>
