save point as I move away from react context and towards tanstack

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <meta property="og:type" content="website" />
     <meta
       name="keywords"
-      content="Personalized News, Custom News Feeds, Diverse Perspectives, Balanced Articles And Videos, Plain Talk Post"
+      content="Personalized News, Custom News Feeds, Diverse Perspectives, Balanced Content And Videos, Plain Talk Post"
     />
     <!-- Twitter Card Meta Tags -->
     <meta name="twitter:card" content="summary_large_image" />
